# mycouncil-mcp

./: .gitignore  README.md  pyproject.toml
src/mycouncil/: client.py  server.py  tier.py
